Fix all broken coach sections resulting from cloudcannon content editing
Comment the hell out of coaches HTML to hopefully make adding more coaches
easier for those who are unfamiliar with bootstrap.

--- a/volleyball.html
+++ b/volleyball.html
@@ -149,7 +149,7 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="uploads/blank_male_avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">TBD</h5></a>
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h6 class="coach-title editable">Assistant Coach</h6></a>
@@ -200,7 +200,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid float-left coach-modal-img editable">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">TBD</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
