--- a/womens-basketball.html
+++ b/womens-basketball.html
@@ -134,12 +134,18 @@ slides:
     <div class="row text-left">
       <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/basketball.svg" class="icon-middle" alt="">&#160;&#160;Coaches</h4>
     </div>
+    <!-- Coaches containing row -->
     <div class="row">
+      <!-- Coach 1 -->
+      <!-- Coach 1 outer column -->
       <div class="col-md-4">
+        <!-- Coach 1 row -->
         <div class="row">
+          <!-- Coach 1 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Coach Donnie Denson" class="img-fluid coach-img modal-link editable"></a></div>
+          <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-nam editable">Donnie Denson</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Donnie&#160;Denson</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">815&#8209;802&#8209;8614<br>
             ddenson@kcc.edu</p>
@@ -147,20 +153,35 @@ slides:
           </div>
         </div>
       </div>
-
+      <!-- Coach 2 -->
+      <!-- Coach 2 outer column -->
       <div class="col-md-4">
+        <!-- Coach 2 row -->
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid coach-img modal-link editable"></a></div>
+          <!-- Coach 2 left image div (inner-left column) -->
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid coach-img modal-link editable"></a></div>
+          <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">Casey Meister</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Casey Meister</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
-            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
         </div>
       </div>
+      <!-- Coach 3 -->
+      <!-- Coach 3 outer column -->
+      <div class="col-md-4">
+        <!-- Coach 3 row would go here
+        to add new coach
+        Copy-and-paste entire contents of a Coach row here and replace info w/ appropriate content ====================================================================================== -->
     </div>
   </div>
+  <!-- To add an additional row of Coaches
+  copy-and-paste entire contents of "Coaches containing row" here and replace info w/ appropriate content
+  ===================================================================================== -->
+</div>
   <!-- Coach Modals -->
+  <!-- Coach modal 1 -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -189,22 +210,8 @@ slides:
     </div>
   </div>
 </div>
+<!-- Coach modal 2 -->
 <div class="modal fade" id="modalCoach2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="modal fade" id="modalCoach3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
