--- a/soccer.html
+++ b/soccer.html
@@ -134,10 +134,16 @@ slides:
     <div class="row text-left">
       <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/soccer.svg" class="icon-middle" alt="" />&#160;&#160;Coaches</h4>
     </div>
+    <!-- Coaches containing row -->
     <div class="row">
+      <!-- Coach 1 -->
+      <!-- Coach 1 outer column -->
       <div class="col-md-4">
+        <!-- Coach 1 row -->
         <div class="row">
+          <!-- Coach 1 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay" class="img-fluid coach-img modal-link editable" /></a></div>
+          <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Mike Barclay</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
@@ -147,10 +153,14 @@ slides:
           </div>
         </div>
       </div>
-
+      <!-- Coach 2 -->
+      <!-- Coach 2 outer column -->
       <div class="col-md-4">
+        <!-- Coach 2 row -->
         <div class="row">
+          <!-- Coach 2 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link editable" /></a></div>
+          <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
@@ -158,19 +168,25 @@ slides:
           </div>
         </div>
       </div>
-    </div>
-
+      <!-- Coach 3 -->
+      <!-- Coach 3 outer column -->
       <div class="col-md-4">
+        <!-- Coach 3 row -->
         <div class="row">
+          <!-- Coach 3 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-3.jpg" width="105" height="140" /></a></div>
+          <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name editable">James Ashby</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach4">View Bio</a>
-
+          </div>
         </div>
       </div>
     </div>
+    <!-- To add an additional row of Coaches
+    copy-and-paste entire contents of "Coaches containing row" here and replace info w/ appropriate content
+    ===================================================================================== -->
   </div>
   <!-- Coach Modals -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
