Finish cleaning up all coaches HTML resulting from content editing in...
CloudCannon.
HTML src="" values were not prefixed with {{page.baseurl}}
Comment all coaches HTML for easier addition of coaches

--- a/baseball.html
+++ b/baseball.html
@@ -144,7 +144,7 @@ slides:
         <!-- Coach 1 row -->
         <div class="row">
           <!-- Coach 1 left image div (inner-left column) -->
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="../uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link editable" title="Photo of Head Coach Todd Post" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link editable" title="Photo of Head Coach Todd Post" /></a></div>
           <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
@@ -163,7 +163,7 @@ slides:
         <!-- Coach 2 row -->
         <div class="row">
           <!-- Coach 2 left image div (inner-left column) -->
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="../uploads/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Bryce Shafer" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Bryce Shafer" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Bryce Shafer</h5>
@@ -184,6 +184,9 @@ slides:
         Copy-and-paste entire contents of a Coach row here and replace info w/ appropriate content ====================================================================================== -->
       </div>
     </div>
+    <!-- To add an additional row of Coaches
+    copy-and-paste entire contents of "Coaches containing row" here and replace info w/ appropriate content
+    ===================================================================================== -->
   </div>
   <!-- Coach Modals -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
