--- a/soccer.html
+++ b/soccer.html
@@ -159,12 +159,12 @@ slides:
         <!-- Coach 2 row -->
         <div class="row">
           <!-- Coach 2 left image div (inner-left column) -->
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link editable" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link editable" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
-            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
         </div>
       </div>
@@ -174,12 +174,12 @@ slides:
         <!-- Coach 3 row -->
         <div class="row">
           <!-- Coach 3 left image div (inner-left column) -->
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-3.jpg" width="105" height="140" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" src="{{page.baseurl}}uploads/blank-male-avatar.jpg" width="105" height="140" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name editable">James Ashby</h5>
+            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">James Ashby</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
-            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach4">View Bio</a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
           </div>
         </div>
       </div>
@@ -223,11 +223,12 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistan Coach John Hall." class="img-fluid float-left coach-modal-img editable" />
-        <h5 class="coach-name editable">John Hall</h5>
+        <img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistan Coach Keion Joseph 'Cruz'." class="img-fluid float-left coach-modal-img editable" />
+        <h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
-          <p>Coach Hall is entering his third season as an assistant at KCC. Hall comes to the Cavaliers with a diverse background/history in soccer. He is president of Dynamo Soccer League in Bourbonnais, which has served more than 1,000 youth players per year since 2008. Hall is not only a former player for Olivet Nazarene University, but h​as coached numerous travel teams for USSA-DUFC (United Select Soccer Association & Dabrico United Futbol Club), Chicago Magic, and other independent teams. He is a licensed referee, and holds a U.S. Soccer Federation (USSF) "E" license. Hall resides in Bourbonnais with his wife, Cassie, and their four children.</p>
+          <p>A Caribbean native from the island of Trinidad & Tobago and standout player for KCC during the 2010 and 2011 seasons, Cruz will be entering his first year as an assistant coach.</p>
+          <p>Cruz is the current director of coaching for Southland FC Strikers and brings five years of coaching experience. He also keeps busy as one of the premier private trainers in the Chicago area by leading Cruz Coaching. He currently resides in Manteno with his fiancé Christina.</p>
         </div>
       </div>
       <div class="modal-footer">
@@ -245,29 +246,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistan Coach Keion Joseph 'Cruz'." class="img-fluid float-left coach-modal-img editable" />
-        <h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
-        <h6 class="coach-title editable">Assistant Coach</h6>
-        <div class="editable">
-          <p>A Caribbean native from the island of Trinidad & Tobago and standout player for KCC during the 2010 and 2011 seasons, Cruz will be entering his first year as an assistant coach.</p>
-          <p>Cruz is the current director of coaching for Southland FC Strikers and brings five years of coaching experience. He also keeps busy as one of the premier private trainers in the Chicago area by leading Cruz Coaching. He currently resides in Manteno with his fiancé Christina.</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="modal fade" id="modalCoach4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistan Coach Keion Joseph 'Cruz'." class="img-fluid float-left coach-modal-img editable" />
         <h5 class="coach-name editable">James Ashby</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
