--- a/softball.html
+++ b/softball.html
@@ -134,10 +134,16 @@ slides:
     <div class="row text-left">
       <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="">&#160;&#160;Coaches</h4>
     </div>
+    <!-- Coaches containing row -->
     <div class="row">
+      <!-- Coach 1 -->
+      <!-- Coach 1 outer column -->
       <div class="col-md-4">
+        <!-- Coach 1 row -->
         <div class="row">
+          <!-- Coach 1 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/18-kcooper-coach.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid coach-img modal-link editable"></a></div>
+          <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Keith Cooper</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
@@ -147,18 +153,27 @@ slides:
           </div>
         </div>
       </div>
+      <!-- Coach 2 -->
+      <!-- Coach 2 outer column -->
       <div class="col-md-4">
+        <!-- Coach 2 row -->
         <div class="row">
-          <div class="col-6 float-left"></div>
+          <!-- Coach 2 left image div (inner-left column) -->
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
+          <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <h5 class="coach-name editable">Heidi Senor</h5>
-            <h6 class="coach-title editable">Assistant Coach</h6>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link">
+              <h5 class="coach-name editable">Heidi Senor</h5>
+              <h6 class="coach-title editable">Assistant Coach</h6>
+            </a>
           </div>
         </div>
       </div>
+      <!-- Coach 3 -->
+      <!-- Coach 3 outer column -->
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
             <h5 class="coach-name editable">Joe Powers</h5>
             <h6 class="coach-title editable">Assistant Coach</h6>
@@ -169,7 +184,7 @@ slides:
     <div class="row coach-row-marg">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
             <h5 class="coach-name editable">Charlie Riner</h5>
             <h6 class="coach-title editable">Assistant Coach</h6>
