--- a/volleyball.html
+++ b/volleyball.html
@@ -134,10 +134,16 @@ slides:
     <div class="row text-left">
       <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/volleyball.svg" class="icon-middle" alt="">&#160;&#160;Coaches</h4>
     </div>
+    <!-- Coaches containing row -->
     <div class="row">
+      <!-- Coach 1 -->
+      <!-- Coach 1 outer column -->
       <div class="col-md-4">
+        <!-- Coach 1 row -->
         <div class="row">
+          <!-- Coach 1 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-syancy-coach.jpg" alt="Photo of Head Coach Stephenee Yancy" class="img-fluid coach-img modal-link editable"></a></div>
+          <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Stephenee Yancy</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
@@ -147,9 +153,14 @@ slides:
           </div>
         </div>
       </div>
+      <!-- Coach 2 -->
+      <!-- Coach 2 outer column -->
       <div class="col-md-4">
+        <!-- Coach 2 row -->
         <div class="row">
+          <!-- Coach 2 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable"></a></div>
+          <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">TBD</h5></a>
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h6 class="coach-title editable">Assistant Coach</h6></a>
@@ -157,7 +168,17 @@ slides:
           </div>
         </div>
       </div>
+      <!-- Coach 3 -->
+      <!-- Coach 3 outer column -->
+      <div class="col-md-4">
+        <!-- Coach 3 row would go here
+        to add new coach
+        Copy-and-paste entire contents of a Coach row here and replace info w/ appropriate content ====================================================================================== -->
+      </div>
     </div>
+    <!-- To add an additional row of Coaches
+    copy-and-paste entire contents of "Coaches containing row" here and replace info w/ appropriate content
+    ===================================================================================== -->
   </div>
   <!-- Coach Modals -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
