Add hidden Coaches for every sport (commented-out) ...
HTML is in place for up to 6 Coaches total per sport.
Simply follow un-commenting instructions to add more coaches.

--- a/softball.html
+++ b/softball.html
@@ -162,10 +162,9 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link">
-              <h5 class="coach-name editable">Heidi Senor</h5>
-              <h6 class="coach-title editable">Assistant Coach</h6>
-            </a>
+              <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Heidi Senor</h5>
+              <h6 class="coach-title editable">Assistant Coach</h6></a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
         </div>
       </div>
@@ -175,23 +174,72 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
-            <h5 class="coach-name editable">Joe Powers</h5>
-            <h6 class="coach-title editable">Assistant Coach</h6>
+            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">Joe Powers</h5>
+            <h6 class="coach-title editable">Assistant Coach</h6></a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
           </div>
         </div>
       </div>
     </div>
+    <!-- second coach row -->
     <div class="row coach-row-marg">
       <div class="col-md-4">
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
-            <h5 class="coach-name editable">Charlie Riner</h5>
-            <h6 class="coach-title editable">Assistant Coach</h6>
+            <a data-toggle="modal" href="#modalCoach4" class="modal-link">
+              <h5 class="coach-name editable">Charlie Riner</h5>
+              <h6 class="coach-title editable">Assistant Coach</h6>
+            </a>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach4">View Bio</a>
           </div>
         </div>
       </div>
+
+      <!-- To add Coach 5:
+      Un-comment the following HTML and replace generic picture/info
+      ALSO un-comment Coach 5 Modal and edit contents
+      ==================================================================================
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach5"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach5" class="modal-link"><h5 class="coach-name editable">Coach 5 Name</h5>
+            <h6 class="coach-title editable">Coach 5 Title</h6></a>
+            <p class="editable">
+              815&#8209;802&#8209;####<br />
+              email@kcc.edu
+            </p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach5">View Bio</a>
+          </div>
+        </div>
+      </div>
+      uncomment to here for Coach 5
+      =====================================================================================  -->
+
+      <!-- To add Coach 6:
+      Un-comment the following HTML and replace generic picture/info
+      ALSO un-comment Coach 6 Modal and edit contents
+      ==================================================================================
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach6"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach6" class="modal-link"><h5 class="coach-name editable">Coach 6 Name</h5>
+            <h6 class="coach-title editable">Coach 6 Title</h6></a>
+            <p class="editable">
+              815&#8209;802&#8209;####<br />
+              email@kcc.edu
+            </p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach6">View Bio</a>
+          </div>
+        </div>
+      </div>
+      uncomment to here for Coach 6
+      =====================================================================================  -->
+
     </div>
+
   </div>
   <!-- Coach Modals -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -221,4 +269,132 @@ slides:
     </div>
   </div>
 </div>
+<div class="modal fade" id="modalCoach2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid float-left coach-modal-img editable">
+        <h5 class="coach-name editable">Heidi Senor</h5>
+        <h6 class="coach-title editable">Assistant Coach</h6>
+      <br>
+        <div class="editable">
+          <p>Coach Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="modalCoach3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid float-left coach-modal-img editable">
+        <h5 class="coach-name editable">Joe Powers</h5>
+        <h6 class="coach-title editable">Assistant Coach</h6>
+      <br>
+        <div class="editable">
+          <p>Coach Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="modalCoach4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid float-left coach-modal-img editable">
+        <h5 class="coach-name editable">Charlie Riner</h5>
+        <h6 class="coach-title editable">Assistant Coach</h6>
+      <br>
+        <div class="editable">
+          <p>Coach Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Coach Modal 5
+if adding a 5th Coach un-comment this modal
+===========================================================================================
+<div class="modal fade" id="modalCoach5" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" title="Photo of Assistant Coach" />
+        <h5 class="coach-name editable">Coach 5 Name</h5>
+        <h6 class="coach-title editable">Coach 5 Title</h6>
+
+        <div class="editable">
+            <p>Coach 5 Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+for 5th coach un-comment to here
+=========================================================================================== -->
+
+<!-- Coach Modal 6
+if adding a 6th Coach un-comment this modal
+===========================================================================================
+<div class="modal fade" id="modalCoach6" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" title="Photo of Assistant Coach" />
+        <h5 class="coach-name editable">Coach 6 Name</h5>
+        <h6 class="coach-title editable">Coach 6 Title</h6>
+
+        <div class="editable">
+            <p>Coach 6 Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+for 6th coach un-comment to here
+=========================================================================================== -->
+
 </section>
