--- a/soccer.html
+++ b/soccer.html
@@ -184,9 +184,82 @@ slides:
         </div>
       </div>
     </div>
+
     <!-- To add an additional row of Coaches
-    copy-and-paste entire contents of "Coaches containing row" here and replace info w/ appropriate content
-    ===================================================================================== -->
+    un-comment this div row and its closing tag (the HTML surrounded by "=" signs)
+    =========================================================
+    <div class="row coach-row-marg">
+    =========================================================
+    Then un-comment any additional coaches needed bellow-->
+
+    <!-- To add Coach 4:
+    Un-comment the following HTML and replace generic picture/info
+    ALSO un-comment Coach 4 Modal and edit contents
+    ==================================================================================
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name editable">Coach 4 Name</h5>
+            <h6 class="coach-title editable">Coach 4 Title</h6></a>
+            <p class="editable">
+              815&#8209;802&#8209;####<br />
+              email@kcc.edu
+            </p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach4">View Bio</a>
+          </div>
+        </div>
+      </div>
+      uncomment to here for Coach 4
+      =====================================================================================  -->
+
+      <!-- To add Coach 5:
+      Un-comment the following HTML and replace generic picture/info
+      ALSO un-comment Coach 5 Modal and edit contents
+      ==================================================================================
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach5"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach5" class="modal-link"><h5 class="coach-name editable">Coach 5 Name</h5>
+            <h6 class="coach-title editable">Coach 5 Title</h6></a>
+            <p class="editable">
+              815&#8209;802&#8209;####<br />
+              email@kcc.edu
+            </p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach5">View Bio</a>
+          </div>
+        </div>
+      </div>
+      uncomment to here for Coach 5
+      =====================================================================================  -->
+
+      <!-- To add Coach 6:
+      Un-comment the following HTML and replace generic picture/info
+      ALSO un-comment Coach 6 Modal and edit contents
+      ==================================================================================
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach6"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
+          <div class="col-6 float-right">
+            <a data-toggle="modal" href="#modalCoach6" class="modal-link"><h5 class="coach-name editable">Coach 6 Name</h5>
+            <h6 class="coach-title editable">Coach 6 Title</h6></a>
+            <p class="editable">
+              815&#8209;802&#8209;####<br />
+              email@kcc.edu
+            </p>
+            <a data-toggle="modal" class="btn btn-primary" href="#modalCoach6">View Bio</a>
+          </div>
+        </div>
+      </div>
+      uncomment to here for Coach 6
+      =====================================================================================  -->
+
+    <!--  closing div row (for adding extra coach row)
+    ========================================================
+    </div>
+    ======================================================== -->
+
   </div>
   <!-- Coach Modals -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -260,4 +333,92 @@ slides:
     </div>
   </div>
 </div>
+
+<!-- Coach Modal 4
+if adding a 4th Coach un-comment this modal
+===========================================================================================
+<div class="modal fade" id="modalCoach4" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" title="Photo of Assistant Coach" />
+        <h5 class="coach-name editable">Coach 4 Name</h5>
+        <h6 class="coach-title editable">Coach 4 Title</h6>
+
+        <div class="editable">
+            <p>Coach 4 Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+for 4th coach un-comment to here
+=========================================================================================== -->
+
+<!-- Coach Modal 5
+if adding a 5th Coach un-comment this modal
+===========================================================================================
+<div class="modal fade" id="modalCoach5" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" title="Photo of Assistant Coach" />
+        <h5 class="coach-name editable">Coach 5 Name</h5>
+        <h6 class="coach-title editable">Coach 5 Title</h6>
+
+        <div class="editable">
+            <p>Coach 5 Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+for 5th coach un-comment to here
+=========================================================================================== -->
+
+<!-- Coach Modal 6
+if adding a 6th Coach un-comment this modal
+===========================================================================================
+<div class="modal fade" id="modalCoach6" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" title="Photo of Assistant Coach" />
+        <h5 class="coach-name editable">Coach 6 Name</h5>
+        <h6 class="coach-title editable">Coach 6 Title</h6>
+
+        <div class="editable">
+            <p>Coach 6 Bio</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+for 6th coach un-comment to here
+=========================================================================================== -->
+
 </section>
