Add GIGANTIC comments about not deleting coaches ...
Coaches and coach modals should be commented out for future use
NOT deleted.

--- a/baseball.html
+++ b/baseball.html
@@ -136,6 +136,12 @@ slides:
     <div class="row text-left">
       <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="Icon of a baseball" />&#160;&#160;Coaches</h4>
     </div>
+    <!-- ========================================================================================
+    =============================================================================================
+     DO NOT DELETE ANY COACHES OR COACHES' MODALS
+    TO REMOVE COACHES USE HTML COMMENTS
+    =============================================================================================
+  =============================================================================================== -->
     <!-- Coaches containing row -->
     <div class="row">
       <!-- Coach 1 -->
@@ -176,7 +182,7 @@ slides:
           </div>
         </div>
       </div>
-      
+
         <!-- To add Coach 3:
         Un-comment the following HTML and replace generic picture/info
         ALSO un-comment Coach 3 Modal and edit contents
