--- a/soccer.html
+++ b/soccer.html
@@ -134,6 +134,12 @@ slides:
     <div class="row text-left">
       <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/soccer.svg" class="icon-middle" alt="" />&#160;&#160;Coaches</h4>
     </div>
+    <!-- ========================================================================================
+    =============================================================================================
+     DO NOT DELETE ANY COACHES OR COACHES' MODALS
+    TO REMOVE COACHES USE HTML COMMENTS
+    =============================================================================================
+  =============================================================================================== -->
     <!-- Coaches containing row -->
     <div class="row">
       <!-- Coach 1 -->
