--- a/soccer/stats/index.html
+++ b/soccer/stats/index.html
@@ -1,7 +1,7 @@
 ---
 layout: sub-nav
 baseurl: ../../
-title: Baseball Stats
+title: Soccer Stats
 base: baseball
 ---
 
@@ -9,7 +9,7 @@ base: baseball
   <div class="row">
       <div class="col-md-12">
         <div class="editable">
-          
+
         </div>
       </div>
   </div>
