--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ slides:
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body">
+              <div class="modal-body yt_player-positioning">
                 		<iframe id="yt_player"></iframe>
               </div>
               <div class="modal-footer">
