Adjust margin-top of text on facilities page per designer's recommendation

--- a/facilities.html
+++ b/facilities.html
@@ -48,7 +48,7 @@ base: facilities
           <img class="img-fluid img-ease editable" src="{{page.baseurl}}uploads/sport-facilities-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
         </a>
       </div>
-      <div class="col-md-8 vert-mid">
+      <div class="col-md-8 facilities__text-margin">
         <p class="editable">Simple introduction paragraph about the sports facilities, that will lead into the individual links below. Simple introduction paragraph about the sports facilities, that will lead into the individual links below.</p>
         <a href="{{site.baseurl}}/facilities/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br>
         <a href="{{site.baseurl}}/facilities/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br>
@@ -67,7 +67,7 @@ base: facilities
           <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/fitness-center-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
         </a>
       </div>
-      <div class="col-md-8 vert-mid">
+      <div class="col-md-8 facilities__text-margin">
         <p class="editable">Simple introduction paragraph about the fitness center, that will lead into the individual links below. Simple introduction paragraph about the fitness center, that will lead into the individual links below.</p>
         <a href="{{site.baseurl}}/facilities/fitness-center#personal-trainers" class="blue-link">Personal Trainers</a><br>
         <a href="{{site.baseurl}}/facilities/fitness-center#membership" class="blue-link">Membership</a><br>
