Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -9,12 +9,11 @@ base: baseball
   <div class="row">
       <div class="col-md-12">
         <div class="editable">
-          <div class="row row-space">
-            <div class="col-md-12 text-center">
-              <h2 class="editable">KCC Cavalier Baseball Stats on NJCAA Region 4 Website <span class="schedule__button-margin"><a href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup" class="btn btn-primary editable" target="_blank" rel="noopener">View Stats</a></span></h2>
+            <div class="row row-space">
+                <div class="col-md-12 text-center">
+                    <h2>KCC Cavalier Baseball Stats on NJCAA Region 4 Website <span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">View Stats</a></span></h2>
+                </div>
             </div>
-          </div>
-
         </div>
       </div>
   </div>
