Test adding custom styles to dropdown for content editors in CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -3,6 +3,9 @@ layout: sub-nav
 baseurl: ../../
 title: Baseball Stats
 base: baseball
+_options:
+  content:
+    styles: /assets/css/content.css
 ---
 
 <section class="container sub-nav-marg">
@@ -14,7 +17,6 @@ base: baseball
               <h2 class="editable">KCC Cavalier Baseball Stats on NJCAA Region 4 Website <span class="schedule__button-margin"><a href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup" class="btn btn-primary editable" target="_blank" rel="noopener">View Stats</a></span></h2>
             </div>
           </div>
-
         </div>
       </div>
   </div>
