Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -4,7 +4,7 @@ baseurl: ../../
 title: Baseball Stats
 base: baseball
 _options:
-  content:
+  _block:
     styles: ../../../assets/css/content.css
 ---
 
