Test defining CloudCannon options in front matter. Set default uploads_dir

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -5,6 +5,11 @@ title: Baseball Stats
 base: baseball
 _options:
   _block:
+    format: p h2
+    undo: true
+    redo: true
+    bulletedlist: true
+    numberedlist: true
     styles: /assets/css/content.css
 ---
 
