Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -20,7 +20,7 @@ _options:
         <div class="editable">
           <div class="row row-space">
             <div class="col-md-12 text-center">
-              <h2 class="content__heading editable">KCC Cavalier Baseball Stats on NJCAA Region 4 Website <span class="schedule__button-margin"><a href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup" class="btn btn-primary editable" target="_blank" rel="noopener">View Stats</a></span></h2>
+              <h2 class="content-heading editable">KCC Cavalier Baseball Stats on NJCAA Region 4 Website <span class="schedule__button-margin"><a href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup" class="btn btn-primary editable" target="_blank" rel="noopener">View Stats</a></span></h2>
             </div>
           </div>
         </div>
