Test CloudCannon CMS _options defined in front-matter

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -5,7 +5,7 @@ title: Baseball Stats
 base: baseball
 _options:
   _block:
-    format: p h2
+    format: h2
     bold: true
     undo: true
     redo: true
