Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -11,7 +11,7 @@ _options:
     redo: true
     bulletedlist: true
     numberedlist: true
-    styles: /assets/css/content.css
+    styles: assets/css/content.css
 ---
 
 <section class="container sub-nav-marg">
