Updated 'facilities.html' via CloudCannon

--- a/facilities.html
+++ b/facilities.html
@@ -29,7 +29,7 @@ base: facilities
   <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
-        <img src="{{page.baseurl}}uploads/facilities-banner.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
+        <img src="{{page.baseurl}}uploads/facilities-banner.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center" />
       </div>
     </div>
   </div>
@@ -45,15 +45,17 @@ base: facilities
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease editable" src="{{page.baseurl}}uploads/sport-facilities-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
+          <img class="img-fluid img-ease editable" src="{{page.baseurl}}uploads/sport-facilities-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field" />
         </a>
       </div>
       <div class="col-md-8 facilities__text-margin">
-        <p class="editable">Simple introduction paragraph about the sports facilities, that will lead into the individual links below. Simple introduction paragraph about the sports facilities, that will lead into the individual links below.</p>
-        <a href="{{site.baseurl}}/facilities/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br>
-        <a href="{{site.baseurl}}/facilities/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br>
-        <a href="{{site.baseurl}}/facilities/sports-facilities#softball-field" class="blue-link">Softball Field</a><br>
-        <a href="{{site.baseurl}}/facilities/sports-facilities#soccer-field" class="blue-link">Soccer Field</a><br>
+        <p class="editable">
+            The KCC Riverfront Campus is located on 178 acres along the tree-lined banks of the Kankakee River.&nbsp; Click on a link below to learn more about our athletics facilities.
+        </p>
+        <a href="{{site.baseurl}}/facilities/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br />
+        <a href="{{site.baseurl}}/facilities/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br />
+        <a href="{{site.baseurl}}/facilities/sports-facilities#softball-field" class="blue-link">Softball Field</a><br />
+        <a href="{{site.baseurl}}/facilities/sports-facilities#soccer-field" class="blue-link">Soccer Field</a><br />
       </div>
     </div>
     <div class="row">
@@ -64,14 +66,16 @@ base: facilities
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/fitness-center-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/fitness-center-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field" />
         </a>
       </div>
       <div class="col-md-8 facilities__text-margin">
-        <p class="editable">Simple introduction paragraph about the fitness center, that will lead into the individual links below. Simple introduction paragraph about the fitness center, that will lead into the individual links below.</p>
-        <a href="{{site.baseurl}}/facilities/fitness-center#personal-trainers" class="blue-link">Personal Trainers</a><br>
-        <a href="{{site.baseurl}}/facilities/fitness-center#membership" class="blue-link">Membership</a><br>
-        <a href="{{site.baseurl}}/facilities/fitness-center#testimonials" class="blue-link">Testimonials</a><br>
+        <p class="editable">
+            The KCC Fitness Center offers total body fitness to members of the community as well as KCC students. The 3,500 square-foot facility features state of the art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of options for various training goals.
+        </p>
+        <a href="{{site.baseurl}}/facilities/fitness-center#personal-trainers" class="blue-link">Personal Trainers</a><br />
+        <a href="{{site.baseurl}}/facilities/fitness-center#membership" class="blue-link">Membership</a><br />
+        <a href="{{site.baseurl}}/facilities/fitness-center#testimonials" class="blue-link">Testimonials</a><br />
       </div>
     </div>
   </div>
